nux/nux_oleg/nux_standalone/build_error.log
   Compiling nux v0.1.0 (/home/aakash/Downloads/Nux_Lang/nux/nux_standalone)
error[E0425]: cannot find value `rel` in this scope
   --> src/compiler.rs:386:38
    |
386 | ...                   p.push(&rel);
    |                               ^^^ not found in this scope

error[E0425]: cannot find value `rel` in this scope
   --> src/compiler.rs:390:38
    |
390 | ...                   p.push(&rel);
    |                               ^^^ not found in this scope

warning: unused import: `std::string::ToString`
 --> src/lexer.rs:4:5
  |
4 | use std::string::ToString;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `self`
 --> src/vm.rs:1:21
  |
1 | use std::vec::{Vec, self};
  |                     ^^^^

warning: unused import: `std::cell::UnsafeCell`
 --> src/vm.rs:5:5
  |
5 | use std::cell::UnsafeCell;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused macro definition: `kprintln`
  --> src/vm.rs:20:14
   |
20 | macro_rules! kprintln {
   |              ^^^^^^^^
   |
   = note: `#[warn(unused_macros)]` (part of `#[warn(unused)]`) on by default

warning: unreachable pattern
   --> src/lexer.rs:323:13
    |
320 |             "not" => Token::Not,
    |             ----- matches all the relevant values
...
323 |             "not" => Token::Not,
    |             ^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/compiler.rs:297:29
    |
297 |                         let mut imported_defs = String::new();
    |                             ----^^^^^^^^^^^^^
    |                             |
    |                             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `imported_defs`
   --> src/compiler.rs:297:29
    |
297 |                         let mut imported_defs = String::new();
    |                             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_imported_defs`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `cname`
   --> src/compiler.rs:758:35
    |
758 | ...                   for (cname, cinfo) in &self.classes {
    |                            ^^^^^ help: if this is intentional, prefix it with an underscore: `_cname`

warning: unreachable pattern
    --> src/compiler.rs:1341:13
     |
1314 |             Token::Identifier(name) => {
     |             ----------------------- matches all the relevant values
...
1341 |             Token::Identifier(name) => {
     |             ^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

warning: unused variable: `cname`
    --> src/compiler.rs:1331:57
     |
1331 | ...   let mut found = None; for (cname, cinfo) in &self.classes { if let Some(off) = cinfo.fields.get(&member) { found = Some(*off); } }
     |                                  ^^^^^ help: if this is intentional, prefix it with an underscore: `_cname`

warning: unreachable pattern
  --> src/assembler.rs:84:13
   |
82 |             "OP_IMG_GRAYSCALE" => ops.push(0x39),
   |             ------------------ matches all the relevant values
83 |             
84 |             "OP_IMG_GRAYSCALE" => ops.push(0x39),
   |             ^^^^^^^^^^^^^^^^^^ no value can reach this

warning: unreachable pattern
   --> src/vm.rs:584:17
    |
503 |                 OP_GFX_RECT => {
    |                 ----------- matches all the relevant values
...
584 |                 OP_GFX_RECT => {
    |                 ^^^^^^^^^^^ no value can reach this

warning: unreachable pattern
   --> src/vm.rs:593:17
    |
512 |                 OP_GFX_TEXT => {
    |                 ----------- matches all the relevant values
...
593 |                 OP_GFX_TEXT => {
    |                 ^^^^^^^^^^^ no value can reach this

warning: unreachable pattern
   --> src/vm.rs:764:17
    |
552 |                 OP_SYSTEM => {
    |                 --------- matches all the relevant values
...
764 |                 OP_SYSTEM => {
    |                 ^^^^^^^^^ no value can reach this

warning: variable does not need to be mutable
   --> src/vm.rs:705:25
    |
705 |                     let mut shared = self.shared.lock();
    |                         ----^^^^^^
    |                         |
    |                         help: remove this `mut`

warning: unused variable: `col`
   --> src/vm.rs:585:25
    |
585 |                     let col = self.pop() as u32;
    |                         ^^^ help: if this is intentional, prefix it with an underscore: `_col`

warning: unused variable: `h`
   --> src/vm.rs:586:25
    |
586 |                     let h = self.pop() as usize;
    |                         ^ help: if this is intentional, prefix it with an underscore: `_h`

warning: unused variable: `w`
   --> src/vm.rs:587:25
    |
587 |                     let w = self.pop() as usize;
    |                         ^ help: if this is intentional, prefix it with an underscore: `_w`

warning: unused variable: `y`
   --> src/vm.rs:588:25
    |
588 |                     let y = self.pop() as usize;
    |                         ^ help: if this is intentional, prefix it with an underscore: `_y`

warning: unused variable: `col`
   --> src/vm.rs:594:25
    |
594 |                     let col = self.pop() as u32;
    |                         ^^^ help: if this is intentional, prefix it with an underscore: `_col`

warning: unused variable: `y`
   --> src/vm.rs:596:25
    |
596 |                     let y = self.pop() as usize;
    |                         ^ help: if this is intentional, prefix it with an underscore: `_y`

warning: variable `x` is assigned to, but never used
   --> src/vm.rs:597:25
    |
597 |                     let mut x = self.pop() as usize;
    |                         ^^^^^
    |
    = note: consider using `_x` instead

warning: unused variable: `c`
   --> src/vm.rs:605:29
    |
605 |                         let c = mem[addr] as char;
    |                             ^ help: if this is intentional, prefix it with an underscore: `_c`

warning: value assigned to `x` is never read
   --> src/vm.rs:607:25
    |
607 |                         x += 8; // Advance cursor 8 pixels
    |                         ^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `nux` (bin "nux") generated 24 warnings
error: could not compile `nux` (bin "nux") due to 2 previous errors; 24 warnings emitted
